--- a/src/index.scss
+++ b/src/index.scss
@@ -118,3 +118,280 @@ $white: #fff;
     border-radius: $rounded-pill;
   }
 }
+
+
+.is-login.site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-header {
+  box-shadow: 0px 5px 59px rgb(0 0 0 / 7%);
+  background: #fff;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 999;
+}
+
+.site-header .row {
+  position: relative;
+}
+
+.col-auto.right-ct .icon-down {
+  margin-left: 12px;
+}
+
+.col-auto.right-ct:hover:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  background-color: transparent;
+}
+
+.col-auto.right-ct ul {
+  position: absolute;
+  top: 100%;
+  margin-top: 57px;
+  padding: 18px 22px 0;
+  width: 300px;
+  background: #FFFFFF;
+  filter: drop-shadow(0px 14px 28px rgba(0, 0, 0, 0.08));
+  border-radius: 14px;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+
+.col-auto.right-ct ul li {
+  padding: 24px 0;
+  list-style-type: none;
+  text-align: center;
+  border-bottom: 1px solid #E5E5E5;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 123.6%;
+}
+
+.col-auto.right-ct ul li a {
+  color: #4C4C4C;
+  display: block;
+}
+
+a {
+  transition: all 0.3s;
+}
+
+a:hover{
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a, a:hover {
+  text-decoration: none;
+  transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  -o-transition: all 0.3s ease-in-out 0s;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -ms-transition: all 0.3s ease-in-out 0s;
+}
+
+.site-header .logo {
+  padding: 27px 0 28px;
+  margin-right: 165px
+}
+
+.site-header .right-ct{
+  margin-top: 20px;
+}
+
+.site-header .logo {
+  margin-right: auto;
+}
+
+.site-header .menu {
+  padding: 0;
+  margin-right: 154px;
+  display: flex;
+  align-items: center;
+}
+
+.site-header .menu .navigation {
+  position: relative;
+  margin-bottom: 0;
+  padding-left: 25px;
+}
+
+.site-header .menu .navigation li {
+  display: inline-block;
+  position: relative;
+}
+
+.site-header .menu .navigation li:hover a, .site-header .menu .navigation li.active a {
+  color: #0D7DFC;
+}
+
+.site-header .menu .navigation li a {
+  color: #333333;
+  font-size: 20px;
+  line-height: 36px;
+}
+
+.site-header .menu .navigation li:not(:last-child) {
+  margin-right: 30px;
+}
+
+.site-header .menu .navigation li:hover::after, .site-header .menu .navigation li.active::after {
+  bottom: -35px;
+}
+
+.site-header .menu .navigation::before {
+  content: "";
+  display: block;
+  height: 51px;
+  width: 1px;
+  background: #E9E9E9;
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.course-bookmark .tab-menu ul li:hover ::after, .course-bookmark .tab-menu ul li.active ::after, .site-header .menu .navigation li:hover::after, .site-header .menu .navigation li.active::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: #0D7DFC;
+}
+
+.site-header .right-ct .btn-register {
+  background: #fff;
+  color: #1D293F;
+  font-family: "San Francisco Display";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px 31px;
+  margin-right: 24px;
+}
+
+.site-header .right-ct .btn-login {
+  background: #0D7DFC;
+  color: #E9F7FE;
+  font-family: "San Francisco Display";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px 32px;
+}
+
+@media screen and (min-width: 1200px){
+  .site-header .logo {
+    padding: 27px 0 28px;
+    margin-left: 50px;
+  }
+  .site-header .right-ct {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 992px){
+  .site-header .logo {
+    margin-right: 100px;
+  }
+}
+
+@media screen and (max-width: 991px){
+  .site-header .logo {
+    padding: 28px 0 28px 38px;
+    margin-right: auto;
+  }
+  .site-header .row {
+    justify-content: space-between;
+  }
+  .site-header .logo img {
+    max-width: 80px;
+  }
+  .site-header .menu {
+    position: absolute;
+    top: 30px;
+    display: none;
+  }
+  .site-header .right-ct .btn-register {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .col-auto.right-ct ul.show-menu {
+      opacity: 1;
+      visibility: visible;
+      margin-top: 23px;
+  }
+  .col-auto.right-ct ul {
+    padding: 10px 10px 0;
+    width: 225px;
+    border-radius: 7px;
+    margin-top: 45px;
+  }
+  .col-auto.right-ct ul li {
+    padding: 12px 0;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .site-header .logo {
+    padding: 0px !important;
+ }
+
+  .col-auto.right-ct ul {
+    width: 205px;
+  }
+
+  .site-header .logo img {
+    margin-top: 30px;
+  }
+  .site-header .right-ct {
+    align-items: flex-end !important;
+    padding-top: 36px;
+    padding-bottom: 20px !important;
+    margin: 0px !important;
+  }
+
+  .site-header .right-ct > img:first-child {
+    width: 32px;
+    height: 32px;
+  }
+
+  .site-header .right-ct > img:nth-child(2) {
+    width: 13px;
+    height: 7px;
+    margin-bottom: 10px;
+  }
+  .col-auto.right-ct ul li a:hover{
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+  }
+  .site-header .right-ct .btn-login {
+    font-size: 14px;
+    line-height: 26px;
+    padding: 2px 14px;
+  }
+}
